fix(Hero and Card 1): realigned elements

--- a/pages/heroandcard1/assets/css/style.css
+++ b/pages/heroandcard1/assets/css/style.css
@@ -60,8 +60,8 @@ section.home {
     color : white;
     font-size: 190px;
     position: absolute;
-    top: 35%;
-    left: 12%;
+    top: 25%;
+    left: center;
 }
 
 #box3{
